--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,3 +1,5 @@
+<app-backend-errors *ngIf="validationErrors$ | async" [backendErrors]="validationErrors$ | async" />
+
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="row mb-3">
     <label for="username" class="col-sm-2 col-form-label">Name</label>
@@ -21,6 +23,7 @@
       />
     </div>
   </div>
+
   <div class="row mb-3">
     <label for="password" class="col-sm-2 col-form-label">Password</label>
     <div class="col-sm-10">
