--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,3 +1,4 @@
+<h1>Зарегистрироваться</h1>
 <app-backend-errors *ngIf="validationErrors$ | async" [backendErrors]="validationErrors$ | async" />
 
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
