--- a/src/app/global-feed/components/global-feed/global-feed.component.html
+++ b/src/app/global-feed/components/global-feed/global-feed.component.html
@@ -1,2 +1,7 @@
-<p>global-feed works!</p>
-<app-feed></app-feed>
+<app-banner></app-banner>
+<div class="container">
+  <div class="row">
+    <div class="col-md-9"><app-feed [apiUrl]="apiUrl"></app-feed></div>
+    <div class="col-md-3">Popular tags</div>
+  </div>
+</div>
