--- a/src/app/global-feed/components/global-feed/global-feed.component.html
+++ b/src/app/global-feed/components/global-feed/global-feed.component.html
@@ -2,6 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-9"><app-feed [apiUrl]="apiUrl"></app-feed></div>
-    <div class="col-md-3">Popular tags</div>
+    <div class="col-md-3">
+      <app-tags-popular></app-tags-popular>
+    </div>
   </div>
 </div>
