--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -33,7 +33,7 @@
           </div>
         </div>
 
-        <div class="feed-favorited">TAGS</div>
+        <app-tag-list [tags]="article.tagList"></app-tag-list>
       </div>
     </div>
   </div>
