--- a/src/app/tag-feed/components/tag-feed/tag-feed.component.html
+++ b/src/app/tag-feed/components/tag-feed/tag-feed.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row mb-2">
     <div class="col-md-12">
-      <app-feed-toggler [tagName]="''"></app-feed-toggler>
+      <app-feed-toggler [tagName]="tagName"></app-feed-toggler>
     </div>
   </div>
   <div class="row">
