--- a/src/app/shared/modules/article-form/components/article-form/article-form.component.html
+++ b/src/app/shared/modules/article-form/components/article-form/article-form.component.html
@@ -45,7 +45,13 @@
         <label for="floatingTagList">Tag List</label>
       </div>
       <div class="form-buttons">
-        <button class="btn btn-success" type="submit">Submit</button>
+        <button
+          class="btn btn-success"
+          type="submit"
+          [disabled]="isSubmittingProps"
+        >
+          Submit
+        </button>
       </div>
     </form>
   </div>
