--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -14,21 +14,14 @@
             {{ article.author.username }}
           </a>
           <span class="date">
-            {{ article.createdAt }}
+            {{ article.createdAt | date:'long' }}
           </span>
         </div>
         <span *ngIf="isAuthor$ | async">
-          <a
-            [routerLink]="['/articles', article.slug, '/edit']"
-            class="btn btn-outline-secondary btn-sm"
-          >
+          <a [routerLink]="['/articles', article.slug, 'edit']" class="btn btn-outline-secondary btn-sm">
             Edit Article
           </a>
-          <button
-            type="button"
-            (click)="deleteArticle()"
-            class="btn btn-danger btn-sm"
-          >
+          <button type="button" (click)="deleteArticle()" class="btn btn-danger btn-sm">
             Delete
           </button>
         </span>
