listener for slug article

--- a/src/app/article-edit/components/article-edit/article-edit.component.html
+++ b/src/app/article-edit/components/article-edit/article-edit.component.html
@@ -1,8 +1,4 @@
 <div class="container">
-  <app-article-form
-    [isSubmitting]="isSubmitting$ | async"
-    [initialValues]="initialValues"
-    [errors]="errors$ | async"
-    (articleSave)="onCreateArticle($event)"
-  ></app-article-form>
+  <app-article-form [isSubmitting]="isSubmitting$ | async" [initialValues]="initialValues" [errors]="errors$ | async"
+    (articleSave)="onUpdateArticle($event)"></app-article-form>
 </div>
