--- a/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
@@ -25,6 +25,10 @@
             <a class="nav-link" [routerLink]="['/articles/new']">Add Article</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/settings']">Settings</a>
+          </li>
+
+          <li class="nav-item">
             <a
               class="nav-link"
               [routerLink]="['/profile', (currentUser$ | async).username]"
