--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="col-md-9">
             <div class="feed-author">
-              <a [routerLink]="['/profile', article.author.username]">{{
+              <a [routerLink]="['/profiles', article.author.username]">{{
                 article.author.username
               }}</a>
               <div class="feed-data">
