--- a/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
+<nav class="navbar navbar-expand-lg mb-4" style="background-color: #e3f2fd">
   <div class="container">
     <a class="navbar-brand" [routerLink]="['/']">Navbar</a>
     <button
