--- a/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
+++ b/src/app/shared/modules/top-bar/components/top-bar/top-bar.component.html
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a
               class="nav-link"
-              [routerLink]="['/profile', (currentUser$ | async).username]"
+              [routerLink]="['/profiles', (currentUser$ | async).username]"
               ><img
                 [src]="(currentUser$ | async).image"
                 class="img-thumbnail"
